--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "dotenv": "^1.2.0",
     "emailjs": "^0.3.16",
     "hapi": "^10.0.0",
+    "pusher": "^1.0.6",
+    "request": "^2.61.0",
     "sendgrid": "^1.9.2"
   }
 }
